kubernetes/pods/butterfly-demo-alb/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: butterfly-1
  labels:
    app: butterfly-1
spec:
  type: NodePort
  ports:
  - port: 57575
    protocol: TCP
    targetPort: 57575
    name: http
  selector:
    app: butterfly-1
